--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.5.0",
+    "@emotion/react": "^11.5.0",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@googlemaps/react-wrapper": "^1.1.12",
+    "@mui/icons-material": "^5.0.0-rc.1",
+    "@mui/material": "^5.0.0-rc.1",
+    "google-maps-react": "^2.0.6",
     "next": "12.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-google-maps": "^9.4.5"
   },
   "devDependencies": {
     "eslint": "7.32.0",
